Fix for ubuntu. Breaks every other OS.

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     },
 
     "scripts": {
-        "install": "node-gyp configure build && node install.js",
-        "test": "node test/test.js"
+        "install": "node-gyp configure build && nodejs install.js",
+        "test": "nodejs test/test.js"
     }
 }
